add: トップページ作成

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,7 +1,15 @@
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
-
-<button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
-
-<button class="btn">daisyUI</button>
+<div class="w-5/6 mx-auto max-w-screen-xl">
+  <div class="flex flex-col justify-center items-center mt-60 mb-24">
+    <h1 class="text-3xl font-bold text-center">
+        酒菜ネットは、お酒&おつまみの情報共有サービスです
+    </h1>
+    <ul class="list-disc mt-14">
+      <li class="py-2">いつもと違うお酒が飲んでみたいが、どれが良いのだろう...</li>
+      <li class="py-2">家飲みがマンネリ化している...</li>
+    </ul>
+    <p class="my-10">このような悩みありませんか？？</p>
+    <p class="py-2">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
+    <p class="py-2">まずは、みんなの投稿を見に行きましょう！</p>
+    <%= link_to 'みんなの投稿へ', '#', class: 'bg-yellow-500 hover:bg-yellow-400 text-black text-3xl font-bold rounded-[10px] my-20 px-10 py-5' %>
+  </div>
+</div>
