add: ヘッダー作成

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,6 +1,6 @@
 <div class="w-5/6 mx-auto max-w-screen-xl">
   <div class="flex flex-col justify-center items-center mt-60 mb-24">
-    <h1 class="text-3xl font-bold text-center">
+    <h1 class="text-3xl font-bold text-center drop-shadow-xl">
         酒菜ネットは、お酒&おつまみの情報共有サービスです
     </h1>
     <ul class="list-disc mt-14">
@@ -10,6 +10,6 @@
     <p class="my-10">このような悩みありませんか？？</p>
     <p class="py-2">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
     <p class="py-2">まずは、みんなの投稿を見に行きましょう！</p>
-    <%= link_to 'みんなの投稿へ', '#', class: 'bg-yellow-500 hover:bg-yellow-400 text-black text-3xl font-bold rounded-[10px] my-20 px-10 py-5' %>
+    <%= link_to 'みんなの投稿へ', '#', class: 'bg-point hover:bg-yellow-400 text-black text-3xl font-bold rounded-[10px] my-20 px-10 py-5 shadow-xl' %>
   </div>
 </div>
