--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-5/6 mx-auto max-w-screen-xl">
-  <div class="flex flex-col justify-center items-center mt-60 mb-24">
+  <div class="flex flex-col justify-center items-center mt-60">
     <h1 class="text-3xl font-bold text-center drop-shadow-xl">
         酒菜ネットは、お酒&おつまみの情報共有サービスです
     </h1>
