add: ユーザー登録ページ作成

--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,7 +2,7 @@
   <%= link_to '酒菜ネット', '#', class:"text-3xl font-bold" %>
   <div class="space-x-14 items-center text-lg font-bold">
     <%= link_to '投稿一覧', '#' %>
-    <%= link_to '新規登録', '#' %>
+    <%= link_to '新規登録', new_user_path %>
     <%= link_to 'ログイン', '#' %>
   </div>
 </header>
