--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,24 @@
-<div class="container">
-  <div class="row">user
-    <div class="col-md-10 col-lg-8 mx-auto">
-      <h1>ユーザー登録</h1>
-      <%= form_with model: @user do |form| %>
-        <div class="mb-3">
-          <%= form.label :name, class: 'form-label' %>
-          <%= form.text_field :name, class: 'form-control' %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :email, class: 'form-label' %>
-          <%= form.text_field :email, class: 'form-control' %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :password, class: 'form-label' %>
-          <%= form.text_field :password, class: 'form-control' %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :password_confirmation, class: 'form-label' %>
-          <%= form.text_field :password_confirmation, class: 'form-control' %>
-        </div>
-        <%= form.submit '新規登録', class: 'btn btn-primary', data: { disable_with: '新規登録'} %>
-      <% end %>
+<div class="mx-auto w-5/6 max-w-screen-sm">
+  <h1 class="text-lg sm:text-2xl font-bold my-10 text-center">ユーザー登録</h1>
+  <%= form_with model: @user do |f| %>
+    <div class="mb-5">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'input border-gray-400 w-full' %>
     </div>
-  </div>
+    <div class="mb-5">
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'input border-gray-400 w-full' %>
+    </div>
+    <div class="mb-5">
+      <%= f.label :password %>
+      <%= f.text_field :password, class: 'input border-gray-400 w-full' %>
+    </div>
+    <div class="mb-5">
+      <%= f.label :password_confirmation %>
+      <%= f.text_field :password_confirmation, class: 'input border-gray-400 w-full' %>
+    </div>
+    <div class="sm-text-lg font-semibold text-center">
+      <%= f.submit '新規登録', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
+    </div>
+  <% end %>
 </div>
