--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= render 'shared/header' %>
     <% else %>
       <%= render 'shared/before_login_header' %>
+    <% end %>
     <div class="flex-grow">
       <%= yield %>
     </div>
