--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="bg-theme bg-opacity-50">
   <div class="container mx-auto flex justify-between items-center px-5 py-5 w-full">
-    <%= link_to '酒菜ネット', '#', class:"text-3xl font-bold" %>
+    <%= link_to '酒菜ネット', root_path, class:"text-3xl font-bold" %>
     <div class="space-x-14 items-center text-lg font-bold flex">
       <%= link_to '投稿一覧', '#' %>
       <%= link_to '投稿する', '#' %>
