--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,11 +11,11 @@
     </div>
     <div class="mb-5">
       <%= f.label :password %>
-      <%= f.text_field :password, class: 'input border-gray-400 w-full' %>
+      <%= f.password_field :password, class: 'input border-gray-400 w-full' %>
     </div>
     <div class="mb-5">
       <%= f.label :password_confirmation %>
-      <%= f.text_field :password_confirmation, class: 'input border-gray-400 w-full' %>
+      <%= f.password_field :password_confirmation, class: 'input border-gray-400 w-full' %>
     </div>
     <div class="sm-text-lg font-semibold text-center">
       <%= f.submit '新規登録', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
