--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto w-5/6 max-w-screen-sm">
-  <h1 class="text-lg sm:text-2xl font-bold my-20 text-center">ユーザー登録</h1>
+  <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= t('.title') %></h1>
   <%= form_with model: @user do |f| %>
     <div class="mb-5">
       <%= f.label :name %>
@@ -18,7 +18,7 @@
       <%= f.password_field :password_confirmation, class: 'input border-gray-400 w-full' %>
     </div>
     <div class="sm-text-lg font-semibold text-center">
-      <%= f.submit '新規登録', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
+      <%= f.submit t('header.signup'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
     </div>
   <% end %>
 </div>
