--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,7 +2,7 @@
   <%= link_to '酒菜ネット', root_path, class:"text-3xl font-bold" %>
   <div class="space-x-14 items-center text-lg font-bold">
     <%= link_to t('header.post_index'), '#' %>
-    <%= link_to t('header.signup'), new_user_path %>
+    <%= link_to t('header.sign_up'), new_user_path %>
     <%= link_to t('header.login'), login_path %>
   </div>
 </header>
