--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <div class="dropdown dropdown-hover">
         <%= image_tag 'default.jpg', class:"rounded-[10px] w-10 h-10" %>
         <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
-          <li><%= link_to t('header.mypage'), '#' %></li>
+          <li><%= link_to t('header.my_page'), '#' %></li>
           <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
         </ul>
       </div>
