--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container mx-auto flex justify-between items-center px-5 py-5 w-full">
     <%= link_to '酒菜ネット', root_path, class:"text-3xl font-bold" %>
     <div class="space-x-14 items-center text-lg font-bold flex">
-      <%= link_to t('header.post_index'), '#' %>
+      <%= link_to t('header.post_index'), posts_path %>
       <%= link_to t('header.create_post'), '#' %>
       <%= link_to t('header.ai_combination'), '#' %>
       <div class="dropdown dropdown-hover">
