--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -10,6 +10,6 @@
     <p class="my-10">このような悩みありませんか？？</p>
     <p class="py-2">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
     <p class="py-2">まずは、みんなの投稿を見に行きましょう！</p>
-    <%= link_to 'みんなの投稿へ', '#', class: 'bg-point hover:bg-yellow-400 text-black text-3xl font-bold rounded-[10px] my-20 px-10 py-5 shadow-xl' %>
+    <%= link_to 'みんなの投稿へ', posts_path, class: 'bg-point hover:bg-yellow-400 text-black text-3xl font-bold rounded-[10px] my-20 px-10 py-5 shadow-xl' %>
   </div>
 </div>
