--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full lg:w-1/3 md:w-1/2 p-4">
   <div class="border border-gray-500 bg-white p-4 rounded-lg">
     <div class="flex flex-row">
-      <%= image_tag default.jpg, class: 'rounded-[10px] w-2 h-2' %>
+      <%= image_tag 'default.jpg', class: 'rounded-[10px] w-2 h-2' %>
       <%= link_to '#', 'post.user' %>
       <%= l post.created_at, format: :long %>
     </div>
