add: ヘッダーに投稿ページリンクを追加

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <%= link_to '酒菜ネット', root_path, class:"text-3xl font-bold" %>
     <div class="space-x-14 items-center text-lg font-bold flex">
       <%= link_to t('header.post_index'), posts_path %>
-      <%= link_to t('header.create_post'), '#' %>
+      <%= link_to t('header.create_post'), new_post_path %>
       <%= link_to t('header.ai_combination'), '#' %>
       <div class="dropdown dropdown-hover">
         <%= image_tag 'default.jpg', class:"rounded-[10px] w-10 h-10" %>
