--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: post do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
   <div class="mb-5">
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: 'input border-gray-400 w-full' %>
