--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div class="<%= flash_color_type(message_type) %> border-l-4 p-4" role="alert">
+  <div class="bg-red-100 border-red-500 text-red-700 border-l-4 p-4" role="alert">
     <ul class="mb-0">
       <% object.errors.each do |error| %>
         <li><%= error.full_message %></li>
