--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <div class="mx-auto w-5/6 max-w-screen-sm">
   <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= t('.title') %></h1>
   <%= form_with model: @user do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
     <div class="mb-5">
       <%= f.label :name %>
       <%= f.text_field :name, class: 'input border-gray-400 w-full' %>
