--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto w-5/6 max-w-screen-sm">
+<div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
   <h1 class="text-lg sm:text-2xl font-bold my-10 text-center"><%= t('.title') %></h1>
   <div class="flex flex-wrap mt-10">
     <% @posts.each do |post| %>
