--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,10 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'input border-gray-400 w-full' %>
     </div>
+    <div class="mb-5">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'w-full' %>
+    </div>
     <div class="sm-text-lg font-semibold text-center">
       <%= f.submit t('header.sign_up'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
     </div>
