--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.label :body, '本文' %>
     <%= f.text_area :body, class: 'input border-gray-400 w-full' %>
   </div>
+  <div class="mb-5">
+    <%= f.label :post_image %>
+    <%= f.file_field :post_image, class: 'w-full' %>
+  </div>
   <div class="sm-text-lg font-semibold text-center">
     <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
   </div>
