--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,7 @@
     <div class="mb-5">
       <%= f.label :avatar %>
       <%= f.file_field :avatar, class: 'w-full' %>
+      <%= f.hidden_field :avatar_cache %>
     </div>
     <div class="sm-text-lg font-semibold text-center">
       <%= f.submit t('header.sign_up'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
