--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,25 +1,25 @@
-<%= form_with model: post do |f| %>
+<%= form_with model: post, id: 'new_post' do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="mb-5">
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: 'input border-gray-400 w-full' %>
   </div>
   <div class="flex md:justify-center mb-5">
-    <div class="w-full md:w-1/4">
+    <div class="w-full md:w-1/2">
       <%= f.label :alcohol, 'お酒' %>
       <%= f.text_field :alcohol, class: 'input border-gray-400 w-full' %>
     </div>
-    <div class="w-full md:w-1/4">
+    <div class="w-full md:w-1/2">
       <%= f.label :alcohol_genre, 'お酒のジャンル' %>
       <%= f.select :alcohol_genre_id, AlcoholGenre.all.map { |genre| [genre.genre, genre.id] }, { include_blank: "未選択" }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
     </div>
   </div>
   <div class="flex md:justify-center mb-5">
-    <div class="w-full md:w-1/4">
+    <div class="w-full md:w-1/2">
       <%= f.label :appetizer, 'おつまみ' %>
       <%= f.text_field :appetizer, class: 'input border-gray-400 w-full' %>
     </div>
-    <div class="w-full md:w-1/4">
+    <div class="w-full md:w-1/2">
       <%= f.label :appetizer_genre, 'おつまみのジャンル' %>
       <%= f.select :appetizer_genre_id, AppetizerGenre.all.map { |genre| [genre.genre, genre.id] }, { include_blank: "未選択" }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
     </div>
@@ -28,10 +28,15 @@
     <%= f.label :body, '本文' %>
     <%= f.text_area :body, class: 'input border-gray-400 w-full' %>
   </div>
-  <div class="mb-5">
-    <%= f.label :post_image %>
-    <%= f.file_field :post_image, class: 'w-full' %>
-    <%= f.hidden_field :post_image_cache %>
+  <div class="flex md:justify-center mb-5">
+    <div class="w-full md:w-1/2">
+      <%= f.label :post_image %>
+      <%= f.file_field :post_image, class: 'w-full', id: 'input' %>
+      <%= f.hidden_field :post_image_cache %>
+    </div>
+    <div class="flex justify-end w-full md:w-1/2">
+      <%= image_tag post.post_image.url, id: 'preview', size: '200x100' %>
+    </div>
   </div>
   <div class="sm-text-lg font-semibold text-center">
     <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
