--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,10 +18,15 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'input border-gray-400 w-full' %>
     </div>
-    <div class="mb-5">
-      <%= f.label :avatar %>
-      <%= f.file_field :avatar, class: 'w-full' %>
-      <%= f.hidden_field :avatar_cache %>
+    <div class="flex md:justify-center mb-5">
+      <div class="w-full md:w-1/2">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar, class: 'w-full', id: 'input' %>
+        <%= f.hidden_field :avatar_cache %>
+      </div>
+      <div class="flex justify-end w-full md:w-1/2">
+        <%= image_tag @user.avatar.url, id: 'preview', size: '200x100' %>
+      </div>
     </div>
     <div class="sm-text-lg font-semibold text-center">
       <%= f.submit t('header.sign_up'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
