add: Xで共有ボタンを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <script src="https://kit.fontawesome.com/773b0f9018.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="flex flex-col min-h-screen">
