--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,4 +25,9 @@
       <%= @post.body %>
     </div>
   </div>
+  # コメントフォーム
+  <%= render 'comments/form', { post: @post, comment: @comment } %>
+
+  # コメントエリア
+  <%= render 'comments/comments', { comments: @comments } %>
 </div>
