add: 投稿詳細ページにコメントフォーム、コメントエリア追加

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,9 +25,8 @@
       <%= @post.body %>
     </div>
   </div>
-  # コメントフォーム
-  <%= render 'comments/form', { post: @post, comment: @comment } %>
-
-  # コメントエリア
-  <%= render 'comments/comments', { comments: @comments } %>
+  <div class="md:w-2/3 mx-auto">
+    <%= render 'comments/form', { post: @post, comment: @comment } %>
+    <%= render 'comments/comments', { comments: @comments } %>
+  </div>
 </div>
