fix: エラー修正

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-row justify-between">
     <div class="flex flex-row items-center">
       <% if comment.user.avatar? %>
-        <%= image_tag post.user.avatar.url, class: 'rounded-[10px] h-7 w-7 border mr-2' %>
+        <%= image_tag comment.user.avatar.url, class: 'rounded-[10px] h-7 w-7 border mr-2' %>
       <% else %>
         <%= image_tag 'default.jpg', class: 'rounded-[10px] h-7 w-7 border mr-2' %>
       <% end %>
