fix: 投稿詳細ページのユーザーアバター修正

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,8 +15,8 @@
         <i class="fa-brands fa-x-twitter mr-2"></i>で共有
       <% end %>
       <div class="flex justify-start my-5">
-        <% if current_user.avatar? %>
-          <%= image_tag current_user.avatar.url, class:"rounded-[5px] w-7 h-7 mr-5" %>
+        <% if @post.user.avatar? %>
+          <%= image_tag @post.user.avatar.url, class:"rounded-[5px] w-7 h-7 mr-5" %>
         <% else %>
           <%= image_tag 'default.jpg', class:"rounded-[5px] w-7 h-7 mr-5" %>
         <% end %>
