--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="border border-gray-500 bg-white p-4 rounded-lg">
+<div class="border border-gray-500 bg-white p-4 rounded-lg mb-5">
   <div class="flex flex-row justify-between">
     <div class="flex flex-row items-center">
       <% if comment.user.avatar? %>
