--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, t('.title')) %>
 <div class="mx-auto w-5/6 max-w-screen-sm">
   <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= t('.title') %></h1>
   <div class="text-center">
