--- a/app/views/posts/_unlike.html.erb
+++ b/app/views/posts/_unlike.html.erb
@@ -1,3 +1,3 @@
-<%= link_to like_path(current_user.likes.find_by(post_id: post.id)), id: "unlike-button-for-post-#{post.id}", class: "bg-gray-400 hover:shadow-lg rounded-full text-lg px-5 py-2", data: { turbo_method: :delete } do %>
+<%= link_to like_path(current_user.likes.find_by(post_id: post.id), return_to: return_to), id: "unlike-button-for-post-#{post.id}", class: "bg-gray-400 hover:shadow-lg rounded-full text-lg px-5 py-2", data: { turbo_method: :delete } do %>
   いいね<i class="fa-solid fa-champagne-glasses"></i>
 <% end %>
