--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
       </ul>
       <div class="flex justify-start">
         <% unless current_user.own?(@post) %>
-          <%= render 'posts/like_button', { post: @post} %>
+          <%= render 'posts/like_button', { post: @post, return_to: 'show' } %>
         <% end %>
         <%= link_to "https://twitter.com/share?url=#{post_url(@post)}&text=#{ERB::Util.url_encode("今日のお酒&おつまみは「#{@post.alcohol}&#{@post.appetizer}」！\n酒菜ネット | ")}&hashtags=sakananet", target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
             class: "bg-slate-950 text-white py-2 px-5 hover:shadow-lg rounded-full text-lg mx-4"  do %>
