--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="flex flex-col-reverse">
         <% unless current_user.own?(post) %>
-          <%= render 'posts/like_button', { post: post, return_to: 'index' } %>
+          <%= render 'posts/like_button', { post: post, return_to: return_to } %>
         <% end %>
       </div>
     </div>
