--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -2,8 +2,8 @@
 <div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
   <h1 class="text-lg sm:text-2xl font-bold my-10 text-center"><%= t('.title') %></h1>
   <div class="flex flex-wrap mt-10">
-    <% @posts.each do |post| %>
-      <%= render 'post', { post: post, return_to: 'index' } %>
+    <% @like_posts.each do |post| %>
+      <%= render 'post', { post: post, return_to: 'liked_index' } %>
     <% end %>
   </div>
 </div>
