--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -24,11 +24,13 @@
         <P>お酒：<%= post.alcohol %></p>
         <P>おつまみ：<%= post.appetizer %></p>
       </div>
-      <div class="flex flex-col-reverse">
-        <% unless current_user.own?(post) %>
-          <%= render 'posts/like_button', { post: post, return_to: return_to } %>
-        <% end %>
-      </div>
+      <% if current_user.present? %>
+        <div class="flex flex-col-reverse">
+          <% unless current_user.own?(post) %>
+            <%= render 'posts/like_button', { post: post, return_to: return_to } %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
