--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,3 +1,3 @@
-<div class="flex flex-col justify-center w-full">
+<div class="flex flex-col justify-center w-full", id="table-comment">
   <%= render comments %>
 </div>
