fix: コメント削除ボタン表示条件の修正

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,12 +12,14 @@
   </div>
   <div class="flex flex-row justify-between">
     <%= simple_format(comment.body) %>
-    <% if current_user.own?(comment) %>
-      <div class="flex flex-row items-center space-x-5">
-        <%= link_to comment_path(comment), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') } do %>
-          <i class="fa-regular fa-trash-can"></i>
-        <% end %>
-      </div>
+    <% if current_user.present? %>
+      <% if current_user.own?(comment) %>
+        <div class="flex flex-row items-center space-x-5">
+          <%= link_to comment_path(comment), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') } do %>
+            <i class="fa-regular fa-trash-can"></i>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
