--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="flex flex-col-reverse justify-center sm:flex-row">
     <div class="flex justify-center border border-gray-500 bg-white p-8 rounded-lg mt-10 sm:mt-0 sm:mr-20">
       <ul class="space-y-10">
-        <li><%= link_to '過去の投稿一覧', posted_posts_path %></li>
+        <li><%= link_to '過去の投稿一覧', user_posts_path(@user) %></li>
         <li><%= link_to 'いいね済み一覧', likes_posts_path %></li>
       </ul>
     </div>
