--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,12 @@
 <% content_for(:title, t('.title')) %>
 <div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
-  <h1 class="text-lg sm:text-2xl font-bold my-10 text-center"><%= t('.title') %></h1>
+  <h1 class="text-lg sm:text-2xl font-bold my-10 text-center">
+    <% if params[:user_id] %>
+      <%= t('.user_posts_title') %>
+    <% else %>
+      <%= t('.title') %>
+    <% end %>
+  </h1>
   <%= render 'search_form', q: @q, url: posts_path %>
   <% if @posts.present? %>
     <div class="flex flex-wrap mt-10">
