--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
       <%= t('.title') %>
     <% end %>
   </h1>
-  <%= render 'search_form', q: @q, url: posts_path %>
+  <%= render 'search_form', q: @q, url: params[:user_id].present? ? user_posts_path(params[:user_id]) : posts_path %>
   <% if @posts.present? %>
     <div class="flex flex-wrap mt-10">
       <% @posts.each do |post| %>
