--- a/app/views/posts/posted.html.erb
+++ b/app/views/posts/posted.html.erb
@@ -1,6 +1,7 @@
 <% content_for(:title, t('.title')) %>
 <div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
   <h1 class="text-lg sm:text-2xl font-bold my-10 text-center"><%= t('.title') %></h1>
+  <%= render 'search_form', q: @q, url: posts_path %>
   <% if @posted_posts.present? %>
     <div class="flex flex-wrap mt-10">
       <% @posted_posts.each do |posted_post| %>
@@ -8,6 +9,8 @@
       <% end %>
     </div>
   <% else %>
-    <%= '過去の投稿はありません' %>
+    <div class="flex justify-center">
+      <%= '過去の投稿はありません' %>
+    </div>
   <% end %>
 </div>
