--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,18 @@
-<header class="bg-theme bg-opacity-50">
-  <div class="container mx-auto flex justify-between items-center px-5 py-5 w-full">
-    <%= link_to '酒菜ネット', root_path, class:"text-3xl font-bold" %>
-    <div class="space-x-14 items-center text-lg font-bold flex">
+<header class="mx-auto flex h-20 items-center justify-between p-6 bg-theme bg-opacity-50 w-full">
+  <%= link_to '酒菜ネット', root_path, class:'text-3xl font-bold' %>
+  <button id="button" type="button" class="z-10 absolute top-6 right-6 md:hidden">
+    <i id="bars" class="fa-solid fa-bars fa-2x"></i>
+    <i id="xmark" class="fa-solid fa-xmark fa-2x text-gray-500 hidden"></i>
+  </button>
+  <nav>
+    <ul id="menu" class="fixed top-0 left-0 z-0 w-full bg-point text-center font-bold text-gray-500 translate-x-full transition ease-linear">
+      <li class="p-3"><%= link_to t('header.post_index'), posts_path %></li>
+      <li class="p-3"><%= link_to t('header.create_post'), new_post_path %></li>
+      <li class="p-3"><%= link_to t('header.ai_combination'), '#' %></li>
+      <li class="p-3"><%= link_to t('header.my_page'), profile_path %></li>
+      <li class="p-3"><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
+    </ul>
+    <div class="space-x-14 items-center text-lg font-bold md:flex hidden md:block">
       <%= link_to t('header.post_index'), posts_path %>
       <%= link_to t('header.create_post'), new_post_path %>
       <%= link_to t('header.ai_combination'), '#' %>
@@ -11,11 +22,11 @@
         <% else %>
           <%= image_tag 'default.jpg', class:"rounded-[10px] w-10 h-10" %>
         <% end %>
-        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+        <ul tabindex="0" class="absolute right-0 dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-40">
           <li><%= link_to t('header.my_page'), profile_path %></li>
           <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
         </ul>
       </div>
     </div>
-  </div>
+  </nav>
 </header>
