fix: 画面縮小時、検索フォーム同士が干渉する問題を修正

--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.hidden_field :user_id_eq, value: params[:user_id] %>
   <% end %>
   <div class="w-full sm:w-2/3 lg:w-1/5 mb-5 mx-1">
-    <%= f.label :title_or_body_cont, 'キーワード（タイトル・本文）' %>
+    <%= f.label :title_or_body_cont, 'タイトル・本文' %>
     <%= f.search_field :title_or_body_cont, class: 'input border-gray-400 w-full', placeholder: 'キーワードを入力' %>
   </div>
   <div class="w-full sm:w-2/3 lg:w-1/5 mb-5 mx-1">
