--- a/app/views/posts/_unlike.html.erb
+++ b/app/views/posts/_unlike.html.erb
@@ -1,3 +1,3 @@
-<%= link_to like_path(current_user.likes.find_by(post_id: post.id)), id: "unlike-button-for-post-#{post.id}", class: "bg-point hover:shadow-lg rounded-full text-lg px-5 py-2", data: { turbo_method: :delete } do %>
-  いいね<i class="fa-solid fa-champagne-glasses"></i>
+<%= link_to like_path(current_user.likes.find_by(post_id: post.id)), id: "unlike-button-for-post-#{post.id}", class: "hover:shadow-lg text-yellow-400", data: { turbo_method: :delete } do %>
+  <i class="fa-solid fa-champagne-glasses fa-lg"></i>
 <% end %>
