--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -21,14 +21,12 @@
     <div class="flex justify-between">
       <div class="space-y-2">
         <%= link_to post.title, post_path(post), class: 'font-bold hover:text-yellow-400' %>
+        <p class="font-bold mr-1">お酒：<%= post.alcohol %></p>
+        <p class="font-bold mr-1">おつまみ：<%= post.appetizer %></p>
         <div class="flex flex-row">
-          <p class="font-bold mr-1">お酒：<%= post.alcohol %></p>
-          <div class="border border-gray-500 rounded-[10px] text-gray-500 px-2">
+          <div class="border border-gray-500 rounded-[10px] text-gray-500 px-2 mr-1">
             <%= post.alcohol_genre.genre %>
           </div>
-        </div>
-        <div class="flex flex-row">
-          <p class="font-bold mr-1">おつまみ：<%= post.appetizer %></p>
           <div class="border border-gray-500 rounded-[10px] text-gray-500 px-2">
             <%= post.appetizer_genre.genre %>
           </div>
