--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, t('.title')) %>
-<div class="mx-auto w-3/4 max-w-screen-sm pt-12 md:pt-24 pb-10">
+<div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
   <h1 class="text-lg sm:text-2xl font-bold my-10 text-center"><%= t('.title') %></h1>
   <div class="flex justify-start items-center mb-5">
     <% if @user.avatar? %>
