--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer-center bg-theme bg-opacity-50 px-8 py-4">
   <div class="flex flex-col items-center mb-2">
-    <nav class="flex flex-wrap justify-center gap-x-10 gap-y-6 md:justify-start md:gap-20">
+    <nav class="flex flex-wrap justify-center gap-x-10 gap-y-6 md:justify-start md:gap-20 text-sm sm:text-base">
       <%= link_to '利用規約', '#' %>
       <%= link_to 'プライバシーポリシー', '#' %>
       <%= link_to 'お問い合わせ', '#' %>
