fix: トップページ再対応

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -9,7 +9,7 @@
     </ul>
     <p class="my-10 text-sm sm:text-base">このような悩みありませんか？？</p>
     <p class="py-2 text-sm sm:text-base">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
-    <p class="py-2 text-sm sm:text-base">まずは、みんなの投稿を見に行きましょう！</p>
-    <%= link_to 'みんなの投稿へ', posts_path, class: 'bg-point hover:bg-yellow-400 text-black text-xl sm:text-3xl font-bold rounded-[10px] my-20 px-5 sm:px-10 py-2 sm:py-5 shadow-xl' %>
+    <p class="pt-2 text-sm sm:text-base">まずは、みんなの投稿を見に行きましょう！</p>
+    <%= link_to 'みんなの投稿へ', posts_path, class: 'bg-point hover:bg-yellow-400 text-black text-xl sm:text-3xl font-bold rounded-[10px] my-12 sm:my-20 px-5 sm:px-10 py-2 sm:py-5 shadow-xl' %>
   </div>
 </div>
