--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,11 +6,11 @@
   </button>
   <nav>
     <ul id="menu" class="fixed top-0 left-0 z-0 w-full bg-point text-center font-bold text-gray-500 translate-x-full transition ease-linear">
-      <li class="p-3"><%= link_to t('header.post_index'), posts_path %></li>
-      <li class="p-3"><%= link_to t('header.create_post'), new_post_path %></li>
-      <li class="p-3"><%= link_to t('header.ai_combination'), '#' %></li>
-      <li class="p-3"><%= link_to t('header.my_page'), profile_path %></li>
-      <li class="p-3"><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.post_index'), posts_path %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.create_post'), new_post_path %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.ai_combination'), '#' %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.my_page'), profile_path %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
     </ul>
     <div class="space-x-14 items-center text-lg font-bold md:flex hidden md:block">
       <%= link_to t('header.post_index'), posts_path %>
