--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,3 +1,3 @@
-<%= link_to likes_path(post_id: post.id), id: "like-button-for-post-#{post.id}", class: "hover:shadow-lg text-gray-300", data: { turbo_method: :post } do %>
+<%= link_to likes_path(post_id: post.id), id: "like-button-for-post-#{post.id}", class: "text-gray-300", data: { turbo_method: :post } do %>
   <i class="fa-solid fa-champagne-glasses fa-lg"></i>
 <% end %>
