--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -47,7 +47,7 @@
             <%= render 'posts/like_button', post: @post %>
           <% end %>
           <%= link_to "https://twitter.com/share?url=#{post_url(@post)}&text=#{ERB::Util.url_encode("今日のお酒&おつまみは「#{@post.alcohol}&#{@post.appetizer}」！\n酒菜ネット | ")}&hashtags=sakananet", target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
-              class: "bg-slate-950 text-white py-2 px-5 hover:shadow-lg rounded-full text-lg mx-4"  do %>
+              class: "bg-slate-950 hover:bg-slate-700 text-white py-2 px-5 rounded-full text-lg mx-8"  do %>
             <i class="fa-brands fa-x-twitter mr-2"></i>で共有
           <% end %>
         <% end %>
