--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,21 +5,21 @@
     <%= f.text_field :title, class: 'input border-gray-400 w-full' %>
   </div>
   <div class="flex flex-col sm:flex-row mb-5">
-    <div class="w-full md:w-1/2 mb-5">
+    <div class="w-full sm:w-1/2 mb-5 sm:mb-0">
       <%= f.label :alcohol, 'お酒' %>
       <%= f.text_field :alcohol, class: 'input border-gray-400 w-full' %>
     </div>
-    <div class="w-full md:w-1/2">
+    <div class="w-full sm:w-1/2">
       <%= f.label :alcohol_genre, 'お酒のジャンル' %>
       <%= f.select :alcohol_genre_id, AlcoholGenre.all.map { |genre| [genre.genre, genre.id] }, { include_blank: "未選択" }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
     </div>
   </div>
   <div class="flex flex-col sm:flex-row mb-5">
-    <div class="w-full md:w-1/2 mb-5">
+    <div class="w-full sm:w-1/2 mb-5 sm:mb-0">
       <%= f.label :appetizer, 'おつまみ' %>
       <%= f.text_field :appetizer, class: 'input border-gray-400 w-full' %>
     </div>
-    <div class="w-full md:w-1/2">
+    <div class="w-full sm:w-1/2">
       <%= f.label :appetizer_genre, 'おつまみのジャンル' %>
       <%= f.select :appetizer_genre_id, AppetizerGenre.all.map { |genre| [genre.genre, genre.id] }, { include_blank: "未選択" }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
     </div>
