fix: プロフィール文が改行されない問題を修正

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -21,7 +21,7 @@
         </div>
       </div>
       <% if @user.profile? %>
-        <%= @user.profile %>
+        <%= simple_format(@user.profile) %>
       <% else %>
         プロフィール未入力
       <% end %>
