--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,9 +4,9 @@
   <div class="flex flex-col-reverse justify-center sm:flex-row">
     <div class="flex justify-center border border-gray-500 bg-white p-8 rounded-lg mt-10 sm:mt-0 sm:mr-20">
       <ul class="space-y-10">
-        <li><%= link_to '過去の投稿一覧', posted_posts_path %></li>
-        <li><%= link_to 'いいね済み一覧', likes_posts_path %></li>
-        <li><%= link_to 'プロフィール設定', edit_profile_path %></li>
+        <li><%= link_to '過去の投稿一覧', posted_posts_path, class:'hover:text-yellow-400' %></li>
+        <li><%= link_to 'いいね済み一覧', likes_posts_path, class:'hover:text-yellow-400' %></li>
+        <li><%= link_to 'プロフィール設定', edit_profile_path, class:'hover:text-yellow-400' %></li>
       </ul>
     </div>
     <div class="w-full sm:w-1/3">
