fix: コメントエリアのカード調整

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="border border-gray-500 bg-white p-4 rounded-lg mb-5", id="comment-<%= comment.id %>">
+<div class="border bg-amber-50 rounded-lg shadow-2xl p-4 mb-5", id="comment-<%= comment.id %>">
   <div class="flex flex-row justify-between">
     <div class="flex flex-row items-center">
       <% if comment.user.avatar? %>
@@ -6,7 +6,7 @@
       <% else %>
         <%= image_tag 'default.jpg', class: 'rounded-[10px] h-7 w-7 border mr-2' %>
       <% end %>
-      <%= link_to comment.user.name, '#' %>
+      <%= link_to comment.user.name, comment.user == current_user ? profile_path : user_path(comment.user), class: 'hover:text-yellow-400' %>
     </div>
     <%= l comment.created_at, format: :long %>
   </div>
@@ -16,7 +16,7 @@
       <% if current_user.own?(comment) %>
         <div class="flex flex-row items-center space-x-5">
           <%= link_to comment_path(comment), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') } do %>
-            <i class="fa-regular fa-trash-can"></i>
+            <i class="fa-regular fa-trash-can fa-lg hover:text-red-500"></i>
           <% end %>
         </div>
       <% end %>
