fix: コメントエリアのカードの影調整

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="border bg-amber-50 rounded-lg shadow-2xl p-4 mb-5", id="comment-<%= comment.id %>">
+<div class="border bg-amber-50 rounded-lg shadow-xl p-4 mb-5", id="comment-<%= comment.id %>">
   <div class="flex flex-row justify-between">
     <div class="flex flex-row items-center">
       <% if comment.user.avatar? %>
